Switch to HuggingFace trainer

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 ipython~=8.16.0
-pytorch-lightning~=2.1.0
 rich~=13.6.0
 sentencepiece~=0.1.99
 tokenizers~=0.14.1
 transformers~=4.34.1
 wandb~=0.15.12
 wonderwords~=2.2.0
+accelerate~=0.24.0
